# umlsequence2

./: .gitignore  CHANGES.md  Makefile  README.md  TODO.md  build-pypi.sh  build-testpypi.sh  build.sh  changelog.py  install-locally.py  make-doc.sh  setup.cfg  setup.py  umlsequence2
doc/: README.md
examples/: README.md  example.eps  example.umlsequence  tut-1.umlsequence  tut-10.umlsequence  tut-2.umlsequence  tut-3.umlsequence  tut-4.umlsequence  tut-5.umlsequence  tut-6.umlsequence  tut-7.umlsequence  tut-8.umlsequence  tut-9.umlsequence
scripts/: lint.sh  publish-to-pypi.sh
src/umlsequence2/: __init__.py  config.py  convert.py  converter.py  error.py  main.py  model.py  parser.py  renderer.py  run.py  svg_builder.py  svg_renderer.py  uml_builder.py
tests/: run-tests.sh  test1.umlsequence
