[metadata]
name = umlsequence2
version = 2.0.3-2
author = Pascal Bauermeister
author_email = pascal.bauermeister@gmail.com
description = UML Sequence diagram generator from text input
license = GNU General Public License v3 (GPLv3)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pbauermeister/umlsequence2
project_urls =
    Bug Tracker = https://github.com/pbauermeister/umlsequence2/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    svgwrite
    svglib

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    umlsequence2 = umlsequence2.main:main
